# moca

./: .TODO.md.swp  .gitignore  CMakeLists.txt  LANGUAGE_DESIGN.md  Makefile  README.md  TODO.md  TODO_function_calls.md  tags  token
include/: err_msg.h  lexer.h  parser.h  source_buffer.h  token.h  token_array.h  tokenizer.h  util.h
include/asm/: asm_file.h  asm_functions.h  asm_globals.h  asm_registers.h  asm_sections.h
include/objects/: built_in_functions.h  function_prototype.h  functions.h  global_scope.h  parameters.h  variables.h
include/parser/: parse_definition.h  parser.h  parser_create_function.h  parser_create_function_call.h  parser_create_function_return.h  parser_create_variable.h  parser_variable_assignment.h
src/: CMakeLists.txt  err_msg.c  lexer.c  source_buffer.c  token.c  token_array.c  tokenizer.c  tokenizer_internal.c  util.c
src/asm/: CMakeLists.txt  asm_file.c  asm_functions.c  asm_globals.c  asm_registers.c  asm_sections.c
src/frontend/: CMakeLists.txt  moca.c
src/objects/: CMakeLists.txt  built_in_functions.c  function_prototype.c  functions.c  global_scope.c  parameters.c  variables.c
src/parser/: CMakeLists.txt  README.md  parse_definition.c  parser.c  parser_create_function.c  parser_create_function_call.c  parser_create_function_return.c  parser_create_variable.c  parser_internal.c  parser_variable_assignment.c
src/samples/: CMakeLists.txt  create_lexer.c  create_token.c  create_token_array.c  create_tokenizer.c  mainfile.moca  read_source_buffer.c
test/: CMakeLists.txt  sample_test.c
test/asm/: CMakeLists.txt  asm_create_functions.c  sample.moca
test/lexer/: CMakeLists.txt  datatypes.moca  lexer_datatypes.c  lexer_helpers.c  lexer_logicals.c  lexer_operators.c  lexer_symbols.c  lexer_textandnumeric.c  logicals.moca  operators.moca  symbols.moca  textandnumeric.moca
test/objects/functions/: CMakeLists.txt  function_prototypes.c
test/objects/variables/: CMakeLists.txt  variable_types.c
test/parser/: CMakeLists.txt
test/parser/definitions/: CMakeLists.txt  function_declaration.c  function_declaration.moca  function_definition.c  function_definition.moca  missing_end_statement.c  parser_too_many_datatype_tokens.c  too_many_datatype_tokens.moca  variable_declaration.c  variable_declaration.moca  variable_definition.c  variable_definition.moca
test/parser/variables/: .create_global_variables.c.swp  CMakeLists.txt  create_global_variables.c  create_global_variables.moca  strings.c  strings.moca
test/tokenizer/: .CMakeLists.txt.swp  .logicals.c.swp  .logicals.moca.swp  CMakeLists.txt  assignment.c  assignment.moca  assignment1.moca  assignment2.moca  doubleoperators.c  doubleoperators.moca  forloops.c  forloops.moca  functions.c  functions.moca  ifstatement.c  ifstatement.moca  logicals.c  logicals.moca  singleoperators.c  singleoperators.moca  test_tokens.c
