add_library(mocaparser
	parser.c
	parse_definition.c
	parser_create_variable.c
	parser_create_function.c
)
target_include_directories(mocaparser
	PUBLIC
	${moca_SOURCE_DIR}/include
	${moca_SOURCE_DIR}/include/parser
)
target_link_libraries(mocaparser
	mocatoken
	mocatokenarray
	mocalexer
	mocaglobalscope
	mocaerr
	mocavariable
	mocafunction
	mocaparameter
)
